# hedgehog-checkers

./: .travis.yml  Makefile  README.md  hedgehog-checkers.cabal  package.yaml  stack.yaml
hedgehog-checkers/: Makefile  README.md  hedgehog-checkers.cabal  package.yaml
hedgehog-checkers-lens/: Makefile  README.md  hedgehog-checkers-lens.cabal  package.yaml
hedgehog-checkers-lens/src/Hedgehog/Checkers/: Lens.hs
hedgehog-checkers-lens/src/Hedgehog/Checkers/Lens/: Properties.hs
hedgehog-checkers-lens/tests/: tests.hs
hedgehog-checkers/src/Hedgehog/: Checkers.hs
hedgehog-checkers/src/Hedgehog/Checkers/: Classes.hs  Properties.hs
hedgehog-checkers/src/Hedgehog/Checkers/Ugly/Function/: Hack.hs
hedgehog-checkers/tests/: tests.hs
src/Hedgehog/: Checkers.hs
tests/: tests.hs
