name:           hedgehog-checkers-lens
version:        0.1.0.0
category:       Web
homepage:       https://github.com/bitemyapp/hedgehog-checkers#readme
author:         Chris Allen
maintainer:     cma@bitemyapp.com
copyright:      2017, Chris Allen
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10

extra-source-files:
    README.md

library
  hs-source-dirs:
      src
  build-depends:
      base >= 4.7 && < 5
    , hedgehog >= 0.5
    , hedgehog-checkers
    , lens
  exposed-modules:
      Hedgehog.Checkers.Lens.Properties
  other-modules:
      Paths_hedgehog_checkers_lens
  default-language: Haskell2010

test-suite tests
  type: exitcode-stdio-1.0
  main-is: tests.hs
  hs-source-dirs:
      tests
  ghc-options: -threaded -Wall -rtsopts -with-rtsopts=-N
  build-depends:
      base >= 4.7 && < 5
    , hedgehog >= 0.5
    , hedgehog-checkers-lens
    , lens
  default-language: Haskell2010
